fix header alignement responsive and render compatible with Visual composer

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body{
 .uk-container .uk-card-default{
   background: none;
   box-shadow: none;
-  padding-left: 21px;
+  padding-left: 0px;
   padding-top: 8px;
   padding-bottom: 4px;
 }
